--- a/css/components/cards.css
+++ b/css/components/cards.css
@@ -1,9 +1,10 @@
+
 .main-wrapper {
     margin-block-start: 120px;
     padding-inline: 5rem;
     position: relative;
     top: -50px;
-    width: 680px;
+    max-width: 1400px;
 }
 
 .main-wrapper .title {
