--- a/css/components/contact.css
+++ b/css/components/contact.css
@@ -4,6 +4,7 @@
     border-radius: var(--border-radius-sm);
     margin: 0 auto;
     color: var(--text-color); 
+    margin-top: 35px;
 }
 
 .portfolio-title-2 {
