--- a/css/components/experience.css
+++ b/css/components/experience.css
@@ -1,10 +1,17 @@
 .experience-section {
-    width: 1440;
-    height: 1000px;
-    background-color: var(--accent-color);
-    border-radius: 2px;
-    margin-top: 40px;
-    padding: 60px 0;
+    width: 100vw;
+    margin: 70px 0 0 0;
+    padding: 80px 0;
+    box-sizing: border-box;
+    min-height: auto;
+    background-color: #FFDA74;
+    border-radius: 0;
+    position: relative;
+    left: 50%;
+    right: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw;
+
 }
 
 .title {
